# iSiN

./: .dockerignore  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  ts.txt
alembic/: env.py
bot/: bot.py
core/: Dockerfile  config.py  core.py
core/Containers/: db_container.py  logger_container.py
core/Logging/: logger_manager.py
core/Models/Tables/: base_table.py  task_table.py  user_table.py
core/Services/DB_service/DB_configuration/: db_config.py  db_session.py
core/Services/db_service/: database.py  db_config.py
