[project]
name = "isin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.2",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "pydantic[settings]>=2.11.10",
    "sqlalchemy>=2.0.44",
]
