[project]
name = "iSiN"
version = "0.1.0"
description = "My personal assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.2",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]
